# duck-typing-python-sample

./: README.md  pyproject.toml
src/: abc_sample.py  protocol_sample.py
